Fix(menu-nav): improve items alignment in mobile viewports

--- a/_css/basic.css
+++ b/_css/basic.css
@@ -175,6 +175,14 @@ instead, display a burger menu.
     right: 0;
   }
 
+  .menu-nav li {
+    height: 27px;
+  }
+
+  #theme-switch {
+    top: 1px !important;
+  }
+
   .darkmode #theme-switch {
     top: 1px !important;
   }
